--- a/css/main.css
+++ b/css/main.css
@@ -48,3 +48,45 @@ img:nth-child(5) {
 }
 
 }
+
+@media only screen and (min-width: 38em) {
+
+img:nth-child(2) {
+  display: block;
+  width: 33.333%;
+}
+
+img:nth-child(3) {
+  display: block;
+  width: 33.333%;
+}
+
+img:nth-child(4) {
+  display: block;
+  width: 33.333%;
+}
+
+img:nth-child(5) {
+  display: none;
+}
+
+}
+
+@media only screen and (min-width: 60em) {
+
+img:nth-child(1) {
+  display: inline-block;
+  width: 66.666%;
+}
+
+img:nth-child(2) {
+  display: inline-block;
+  width: 33.333%;
+}
+
+img:nth-child(5) {
+  display: inline-block;
+  width: 33.333%;
+}
+
+}
